--- a/paginas/hombre.html
+++ b/paginas/hombre.html
@@ -40,16 +40,25 @@
                     </select>
                         </div>    
                         <div class="boton">
-                    <button id="reiniciar " type="reset">Reiniciar</button>
+                    <button id="reiniciar" type="reset">Reiniciar</button>
                     <button id="boton" type="submit">Calcular</button>
                         </div>
                   </form>
                   <div id="resultado">Resultado</div>
+                  
             </div>
+
             <div class="contenedorImg">
                 <img src="..//imagenes/turco.jpg" alt="">
             </div>
         </div>
+        <div id="mostrarLista">
+            <div id="nombreLista">Nombre</div>
+            <div id="pesoLista">Peso</div>
+            <div id="alturaLista">Altura</div>
+            <div id="edadLista">Edad</div>
+            <div id="resultadoLista">Resultado</div>
+          </div>
     </main>
     <script src="../javascript/script.js"></script>
 </body>
